--- a/3. Requisitos de la formacion de los contratos.html
+++ b/3. Requisitos de la formacion de los contratos.html
@@ -4,7 +4,14 @@
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
 <meta http-equiv="X-UA-Compatible" content="ie=edge">
-<title>Markmap</title>
+<title>Mapas Mentales - Derecho Civil III</title>
+
+<!-- Bootstrap CSS -->
+<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css"
+      rel="stylesheet"
+      integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH"
+      crossorigin="anonymous">
+<link rel="stylesheet" href="./base.css">
 <style>
 * {
   margin: 0;
@@ -19,7 +26,18 @@
 <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/markmap-toolbar@0.17.0/dist/style.css">
 </head>
 <body>
-<svg id="mindmap"></svg>
+  <header>
+    <nav class="navbar bg-body-tertiary">
+      <div class="container-fluid">
+        <a class="navbar-brand navbar-logo" href="./index.html">F3RBAR</a>
+      </div>
+    </nav>
+  </header>
+  <main>
+    <svg id="mindmap"></svg>
+  </main>
 <script src="https://cdn.jsdelivr.net/npm/d3@7.8.5/dist/d3.min.js"></script><script src="https://cdn.jsdelivr.net/npm/markmap-view@0.17.0/dist/browser/index.js"></script><script src="https://cdn.jsdelivr.net/npm/markmap-toolbar@0.17.0/dist/index.js"></script><script>(()=>{setTimeout(()=>{const{markmap:O,mm:h}=window,M=new O.Toolbar;M.attach(h);const oe=M.render();oe.setAttribute("style","position:absolute;bottom:20px;right:20px"),document.body.append(oe)})})()</script><script>((i,L,f,r)=>{const w=i();window.mm=w.Markmap.create("svg#mindmap",(L||w.deriveOptions)(r),f)})(()=>window.markmap,null,{"content":"Requisitos de Formación de los Contratos","children":[{"content":"Introducción","children":[{"content":"Acuerdo entre dos o más personas","children":[],"payload":{"lines":"9,10"}},{"content":"Constituir, modificar o extinguir una relación jurídica","children":[],"payload":{"lines":"10,11"}},{"content":"Elementos esenciales denominados requisitos","children":[],"payload":{"lines":"11,13"}}],"payload":{"lines":"8,9"}},{"content":"Requisitos de formación (Artículo 452 del Código Civil)","children":[{"content":"Consentimiento de las partes","children":[],"payload":{"lines":"14,15"}},{"content":"Objeto","children":[],"payload":{"lines":"15,16"}},{"content":"Causa","children":[],"payload":{"lines":"16,17"}},{"content":"Forma","children":[],"payload":{"lines":"17,19"}}],"payload":{"lines":"13,14"}},{"content":"Requisitos de validez de los contratos","children":[{"content":"Capacidad de Contratar","children":[{"content":"Aptitud para realizar válidamente actos civiles","children":[],"payload":{"lines":"21,22"}}],"payload":{"lines":"20,22"}},{"content":"Ausencia de Vicios del Consentimiento","children":[{"content":"Violencia, dolo, error sustancial, etc.","children":[],"payload":{"lines":"23,25"}}],"payload":{"lines":"22,25"}}],"payload":{"lines":"19,20"}},{"content":"Nulidad del contrato","children":[{"content":"Falta de objeto o forma en el contrato","children":[],"payload":{"lines":"26,27"}},{"content":"Ilicitud de la causa o Motivo ilícito","children":[],"payload":{"lines":"27,28"}},{"content":"Faltar en el objeto los requisitos señalados por ley","children":[],"payload":{"lines":"28,30"}}],"payload":{"lines":"25,26"}},{"content":"Anulabilidad del contrato","children":[{"content":"Falta de consentimiento","children":[],"payload":{"lines":"31,32"}},{"content":"Incapacidad de una de las partes","children":[],"payload":{"lines":"32,33"}},{"content":"Violencia, dolo o error sustancial","children":[],"payload":{"lines":"33,34"}},{"content":"Incapacidad de entendimiento en la celebración del contrato.","children":[],"payload":{"lines":"34,35"}},{"content":"Error sobre identidad o cualidades de la persona","children":[],"payload":{"lines":"35,37"}}],"payload":{"lines":"30,31"}},{"content":"Consentimiento","children":[{"content":"Oferta","children":[{"content":"Requisitos de la oferta","children":[{"content":"Seria: intención real de celebrar el contrato","children":[],"payload":{"lines":"47,48"}},{"content":"Completa: contener todos los elementos del contrato","children":[],"payload":{"lines":"48,50"}}],"payload":{"lines":"46,47"}}],"payload":{"lines":"41,42"}},{"content":"Aceptación","children":[{"content":"Manifestación unilateral de voluntad","children":[],"payload":{"lines":"51,52"}},{"content":"Puede ser expresa o tácita","children":[],"payload":{"lines":"52,53"}},{"content":"El silencio puede constituir aceptación en ciertos casos","children":[],"payload":{"lines":"53,55"}}],"payload":{"lines":"50,51"}}],"payload":{"lines":"37,38"}},{"content":"Revocación y caducidad de la oferta y la aceptación (Artículo 458 del Código Civil)","children":[{"content":"Revocación antes del conocimiento de la aceptación","children":[],"payload":{"lines":"56,57"}},{"content":"Caducidad por muerte o incapacidad de las partes","children":[],"payload":{"lines":"57,58"}}],"payload":{"lines":"55,56"}}],"payload":{"lines":"6,7"}},null)</script>
 </body>
 </html>
+
+
