--- a/5. Vicios del consentimiento.html
+++ b/5. Vicios del consentimiento.html
@@ -4,7 +4,14 @@
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
 <meta http-equiv="X-UA-Compatible" content="ie=edge">
-<title>Markmap</title>
+<title>Mapas Mentales - Derecho Civil III</title>
+
+<!-- Bootstrap CSS -->
+<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css"
+      rel="stylesheet"
+      integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH"
+      crossorigin="anonymous">
+<link rel="stylesheet" href="./base.css">
 <style>
 * {
   margin: 0;
@@ -19,7 +26,16 @@
 <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/markmap-toolbar@0.17.0/dist/style.css">
 </head>
 <body>
-<svg id="mindmap"></svg>
+  <header>
+    <nav class="navbar bg-body-tertiary">
+      <div class="container-fluid">
+        <a class="navbar-brand navbar-logo" href="./index.html">F3RBAR</a>
+      </div>
+    </nav>
+  </header>
+  <main>
+    <svg id="mindmap"></svg>
+  </main>
 <script src="https://cdn.jsdelivr.net/npm/d3@7.8.5/dist/d3.min.js"></script><script src="https://cdn.jsdelivr.net/npm/markmap-view@0.17.0/dist/browser/index.js"></script><script src="https://cdn.jsdelivr.net/npm/markmap-toolbar@0.17.0/dist/index.js"></script><script>(()=>{setTimeout(()=>{const{markmap:O,mm:h}=window,M=new O.Toolbar;M.attach(h);const oe=M.render();oe.setAttribute("style","position:absolute;bottom:20px;right:20px"),document.body.append(oe)})})()</script><script>((i,L,f,r)=>{const w=i();window.mm=w.Markmap.create("svg#mindmap",(L||w.deriveOptions)(r),f)})(()=>window.markmap,null,{"content":"Vicios del consentimiento","children":[{"content":"1. El error","children":[{"content":"Clases de error","children":[{"content":"Error de derecho","children":[{"content":"Desconocimiento de una regla legal","children":[],"payload":{"lines":"13,14"}},{"content":"No afecta la validez del consentimiento","children":[],"payload":{"lines":"14,15"}}],"payload":{"lines":"12,15"}},{"content":"Error de hecho","children":[{"content":"Conocimiento imperfecto de personas o cosas","children":[],"payload":{"lines":"16,17"}},{"content":"Puede determinar nulidad o anulabilidad del contrato","children":[],"payload":{"lines":"17,19"}}],"payload":{"lines":"15,19"}}],"payload":{"lines":"11,12"}},{"content":"Tipos de error de hecho","children":[{"content":"Error esencial","children":[{"content":"Recae sobre la naturaleza del contrato o identidad del objeto","children":[],"payload":{"lines":"21,22"}},{"content":"Impide la formación del consentimiento","children":[],"payload":{"lines":"22,23"}}],"payload":{"lines":"20,23"}},{"content":"Error sustancial","children":[{"content":"Recae sobre la sustancia o cualidades de la cosa","children":[],"payload":{"lines":"24,25"}},{"content":"Debe ser compartido por las partes","children":[],"payload":{"lines":"25,26"}}],"payload":{"lines":"23,26"}},{"content":"Error de cálculo","children":[{"content":"Incide sobre operaciones matemáticas","children":[],"payload":{"lines":"27,28"}},{"content":"Da lugar a rectificación","children":[],"payload":{"lines":"28,29"}}],"payload":{"lines":"26,29"}},{"content":"Error intrascendente","children":[{"content":"No tiene efecto jurídico por su poca importancia","children":[],"payload":{"lines":"30,32"}}],"payload":{"lines":"29,32"}}],"payload":{"lines":"19,20"}}],"payload":{"lines":"7,8"}},{"content":"2. Violencia","children":[{"content":"Clases de violencia","children":[{"content":"Coacción física","children":[{"content":"Uso de fuerza o medios físicos","children":[],"payload":{"lines":"38,39"}}],"payload":{"lines":"37,39"}},{"content":"Coacción psicológica","children":[{"content":"Amenazas que intimidan a la persona","children":[],"payload":{"lines":"40,42"}}],"payload":{"lines":"39,42"}}],"payload":{"lines":"36,37"}},{"content":"Caracteres de la violencia","children":[{"content":"Grave","children":[{"content":"Capaz de intimidar a una persona razonable","children":[],"payload":{"lines":"44,45"}}],"payload":{"lines":"43,45"}},{"content":"Presente","children":[{"content":"Relación directa de temporalidad entre violencia y consentimiento","children":[],"payload":{"lines":"46,47"}}],"payload":{"lines":"45,47"}},{"content":"Ilegítima","children":[{"content":"Contraviene el ordenamiento jurídico","children":[],"payload":{"lines":"48,50"}}],"payload":{"lines":"47,50"}}],"payload":{"lines":"42,43"}}],"payload":{"lines":"32,33"}},{"content":"3. Dolo","children":[{"content":"Tipos de dolo","children":[{"content":"Dolo bueno (dolus bonus)","children":[{"content":"Prácticas comerciales lícitas","children":[],"payload":{"lines":"56,57"}}],"payload":{"lines":"55,57"}},{"content":"Dolo malo","children":[{"content":"Engaño con intención de inducir a error","children":[],"payload":{"lines":"58,60"}}],"payload":{"lines":"57,60"}}],"payload":{"lines":"54,55"}}],"payload":{"lines":"50,51"}}],"payload":{"lines":"1,2"}},{"colorFreezeLevel":2})</script>
 </body>
 </html>
