Added new elements to the list-group and some css styles

--- a/index.html
+++ b/index.html
@@ -38,6 +38,9 @@
                 <a href="./3. Requisitos de la formacion de los contratos.html" class="list-group-item list-group-item-action">3. Requisitos de la formacion de los contratos</a>
                 <a href="./4. El consentimiento.html" class="list-group-item list-group-item-action">4. El consentimiento</a>
                 <a href="./5. Vicios del consentimiento.html" class="list-group-item list-group-item-action">5. Vicios del consentimiento</a>
+                <a href="#" class="list-group-item list-group-item-action disabled">6. Capacidad Objeto Causa Y Forma (Proximamente)</a>
+                <a href="#" class="list-group-item list-group-item-action disabled">7. Efectos de los Contratos (Proximamente)</a>
+                <a href="#" class="list-group-item list-group-item-action disabled">8. Efectos de los Contratos Respeto a Terceros (Proximamente)</a>
               </div>
             </div>
           </div>
