Added dark mode support

--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!doctype html>
-<html lang="en">
+<html lang="en" data-bs-theme="dark">
   <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
@@ -23,12 +23,12 @@
     </header>
     <!-- Main Content -->
     <main>
-      <section class="section bg-light">
+      <section class="section bg-dark">
         <div class="container">
           <div class="row justify-content-center mb-5">
             <div class="col-md-8 text-center">
               <h1 class="heading mb-4">Encuentra los apuntes que necesitas</h1>
-              <p class="mb-4 lead" style="color: #595c5f;">
+              <p class="mb-4 lead" style="color: #fff;">
                 ¡Hola! En esta web vas a encontrar apuntes sobre Derecho Civil. ¡Gratis!</p>
               <div class="list-group">
                 <a href="./1. Introduccion al derecho de las obligaciones.html" class="list-group-item list-group-item-action" aria-current="true">
