Added dark mode to nav bar and center navbar logo

--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!doctype html>
-<html lang="en" data-bs-theme="dark">
+<html lang="es" data-bs-theme="dark">
   <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
@@ -16,7 +16,7 @@
   <body>
     <header>
       <nav class="navbar bg-body-tertiary">
-        <div class="container-fluid">
+        <div class="container-fluid justify-content-center">
           <a class="navbar-brand navbar-logo" href="./index.html">F3RBAR</a>
         </div>
       </nav>
@@ -38,9 +38,9 @@
                 <a href="./3. Requisitos de la formacion de los contratos.html" class="list-group-item list-group-item-action">3. Requisitos de la formacion de los contratos</a>
                 <a href="./4. El consentimiento.html" class="list-group-item list-group-item-action">4. El consentimiento</a>
                 <a href="./5. Vicios del consentimiento.html" class="list-group-item list-group-item-action">5. Vicios del consentimiento</a>
-                <a href="#" class="list-group-item list-group-item-action disabled">6. Capacidad Objeto Causa Y Forma (Proximamente)</a>
-                <a href="#" class="list-group-item list-group-item-action disabled">7. Efectos de los Contratos (Proximamente)</a>
-                <a href="#" class="list-group-item list-group-item-action disabled">8. Efectos de los Contratos Respeto a Terceros (Proximamente)</a>
+                <a href="./6. Capacidad Objeto Causa Y Forma.html" class="list-group-item list-group-item-action disabled">6. Capacidad Objeto Causa Y Forma</a>
+                <a href="./7. Efectos de los Contratos entre las Partes Contratantes.html" class="list-group-item list-group-item-action disabled">7. Efectos de los Contratos entre las Partes Contratantes</a>
+                <a href="./8. Efectos de los Contratos Respeto a Terceros.html8. Efectos de los Contratos Respeto a Terceros" class="list-group-item list-group-item-action disabled">8. Efectos de los Contratos Respeto a Terceros</a>
               </div>
             </div>
           </div>
