--- a/5. Vicios del consentimiento.html
+++ b/5. Vicios del consentimiento.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html>
+<html lang="es" data-bs-theme="dark">
 <head>
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -28,7 +28,7 @@
 <body>
   <header>
     <nav class="navbar bg-body-tertiary">
-      <div class="container-fluid">
+      <div class="container-fluid justify-content-center">
         <a class="navbar-brand navbar-logo" href="./index.html">F3RBAR</a>
       </div>
     </nav>
