Added new background color

--- a/index.html
+++ b/index.html
@@ -31,16 +31,16 @@
               <p class="mb-4 lead" style="color: #fff;">
                 ¡Hola! En esta web vas a encontrar apuntes sobre Derecho Civil. ¡Gratis!</p>
               <div class="list-group">
-                <a href="./1. Introduccion al derecho de las obligaciones.html" class="list-group-item list-group-item-action" aria-current="true">
+                <a href="./apuntes/1. Introduccion al derecho de las obligaciones.html" class="list-group-item list-group-item-action" aria-current="true">
                   1. Introduccion al derecho de las obligaciones
                 </a>
-                <a href="./2. Fuente de las obligaciones.html" class="list-group-item list-group-item-action">2. Fuente de las obligaciones</a>
-                <a href="./3. Requisitos de la formacion de los contratos.html" class="list-group-item list-group-item-action">3. Requisitos de la formacion de los contratos</a>
-                <a href="./4. El consentimiento.html" class="list-group-item list-group-item-action">4. El consentimiento</a>
-                <a href="./5. Vicios del consentimiento.html" class="list-group-item list-group-item-action">5. Vicios del consentimiento</a>
-                <a href="./6. Capacidad Objeto Causa Y Forma.html" class="list-group-item list-group-item-action disabled">6. Capacidad Objeto Causa Y Forma</a>
-                <a href="./7. Efectos de los Contratos entre las Partes Contratantes.html" class="list-group-item list-group-item-action disabled">7. Efectos de los Contratos entre las Partes Contratantes</a>
-                <a href="./8. Efectos de los Contratos Respeto a Terceros.html8. Efectos de los Contratos Respeto a Terceros" class="list-group-item list-group-item-action disabled">8. Efectos de los Contratos Respeto a Terceros</a>
+                <a href="./apuntes/2. Fuente de las obligaciones.html" class="list-group-item list-group-item-action">2. Fuente de las obligaciones</a>
+                <a href="./apuntes/3. Requisitos de la formacion de los contratos.html" class="list-group-item list-group-item-action">3. Requisitos de la formacion de los contratos</a>
+                <a href="./apuntes/4. El consentimiento.html" class="list-group-item list-group-item-action">4. El consentimiento</a>
+                <a href="./apuntes/5. Vicios del consentimiento.html" class="list-group-item list-group-item-action">5. Vicios del consentimiento</a>
+                <a href="./apuntes/6. Capacidad Objeto Causa Y Forma.html" class="list-group-item list-group-item-action">6. Capacidad Objeto Causa Y Forma</a>
+                <a href="./apuntes/7. Efectos de los Contratos entre las Partes Contratantes.html" class="list-group-item list-group-item-action">7. Efectos de los Contratos entre las Partes Contratantes</a>
+                <a href="./apuntes/8. Efectos de los Contratos Respeto a Terceros.html" class="list-group-item list-group-item-action">8. Efectos de los Contratos Respeto a Terceros</a>
               </div>
             </div>
           </div>
