--- a/apuntes/8. Efectos de los Contratos Respeto a Terceros.html
+++ b/apuntes/8. Efectos de los Contratos Respeto a Terceros.html
@@ -4,7 +4,14 @@
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
 <meta http-equiv="X-UA-Compatible" content="ie=edge">
-<title>Markmap</title>
+<title>Mapas Mentales - Derecho Civil III</title>
+
+<!-- Bootstrap CSS -->
+<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css"
+      rel="stylesheet"
+      integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH"
+      crossorigin="anonymous">
+<link rel="stylesheet" href="./base.css">
 <style>
 * {
   margin: 0;
@@ -17,9 +24,19 @@
 }
 </style>
 <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/markmap-toolbar@0.17.0/dist/style.css">
+<link rel="stylesheet" href="./base.css">
 </head>
 <body>
-<svg id="mindmap"></svg>
+  <header>
+    <nav class="navbar bg-body-tertiary">
+      <div class="container-fluid justify-content-center">
+        <a class="navbar-brand navbar-logo" href="./index.html">F3RBAR</a>
+      </div>
+    </nav>
+  </header>
+  <main>
+    <svg id="mindmap"></svg>
+  </main>
 <script src="https://cdn.jsdelivr.net/npm/d3@7.8.5/dist/d3.min.js"></script><script src="https://cdn.jsdelivr.net/npm/markmap-view@0.17.0/dist/browser/index.js"></script><script src="https://cdn.jsdelivr.net/npm/markmap-toolbar@0.17.0/dist/index.js"></script><script>(()=>{setTimeout(()=>{const{markmap:O,mm:h}=window,M=new O.Toolbar;M.attach(h);const oe=M.render();oe.setAttribute("style","position:absolute;bottom:20px;right:20px"),document.body.append(oe)})})()</script><script>((i,L,f,r)=>{const w=i();window.mm=w.Markmap.create("svg#mindmap",(L||w.deriveOptions)(r),f)})(()=>window.markmap,null,{"content":"Efectos de los Contratos Respecto a Terceros","children":[{"content":"Principio de la Relatividad de los Contratos","children":[{"content":"Contratos solo tienen efecto entre las partes contratantes.","children":[],"payload":{"lines":"10,11"}},{"content":"No afectan ni benefician a terceros, salvo casos previstos por la ley.","children":[],"payload":{"lines":"11,13"}}],"payload":{"lines":"9,10"}},{"content":"Conceptos Clave","children":[{"content":"Partes","children":[{"content":"Personas individuales o colectivas que participan en el contrato directamente o por representación.","children":[],"payload":{"lines":"15,17"}}],"payload":{"lines":"14,15"}},{"content":"Terceros","children":[{"content":"Personas que no participaron en la formación del contrato ni por representación.","children":[],"payload":{"lines":"18,20"}}],"payload":{"lines":"17,18"}},{"content":"Causahabientes","children":[{"content":"<strong>Título Universal</strong>: Sucesores o herederos universales.","children":[{"content":"Contratan para sí y sus herederos.","children":[],"payload":{"lines":"22,23"}}],"payload":{"lines":"21,23"}},{"content":"<strong>Título Particular</strong>: Personas que reciben un derecho u objeto específico.","children":[],"payload":{"lines":"23,25"}}],"payload":{"lines":"20,21"}}],"payload":{"lines":"13,14"}},{"content":"Excepciones al Principio de Relatividad","children":[{"content":"Promesa por un Tercero","children":[{"content":"Una persona se compromete que un tercero ejecutara una prestación.","children":[],"payload":{"lines":"27,28"}},{"content":"Tercero debe aceptar la obligación.","children":[],"payload":{"lines":"28,29"}},{"content":"Si el tercero no cumple, el prometiente debe indemnizar.","children":[],"payload":{"lines":"29,31"}}],"payload":{"lines":"26,27"}},{"content":"Estipulación a Favor de un Tercero","children":[{"content":"Una persona obliga a otra en favor de un tercero ajeno al contrato.","children":[],"payload":{"lines":"32,33"}},{"content":"Tres partes: estipulante, promitente, tercero beneficiario.","children":[],"payload":{"lines":"33,34"}},{"content":"El tercero adquiere derecho a la prestación independientemente de su aceptación.","children":[],"payload":{"lines":"34,36"}}],"payload":{"lines":"31,32"}}],"payload":{"lines":"25,26"}},{"content":"Efectos de la Estipulación a Favor de un Tercero","children":[{"content":"Creación de Obligación","children":[{"content":"El promitente está obligado a la prestación a favor del tercero.","children":[],"payload":{"lines":"38,39"}}],"payload":{"lines":"37,38"}},{"content":"Irrevocabilidad","children":[{"content":"La estipulación se vuelve irrevocable una vez aceptada por el tercero.","children":[],"payload":{"lines":"40,41"}}],"payload":{"lines":"39,40"}},{"content":"Exigibilidad de la Obligación","children":[{"content":"El tercero puede exigir la prestación, haya aceptado o no.","children":[],"payload":{"lines":"42,44"}}],"payload":{"lines":"41,42"}}],"payload":{"lines":"36,37"}},{"content":"Revocabilidad y Destino de la Prestación","children":[{"content":"Revocación","children":[{"content":"Estipulante puede revocar o modificar antes de la aceptación del tercero.","children":[],"payload":{"lines":"46,47"}}],"payload":{"lines":"45,46"}},{"content":"Destino de la Prestación","children":[{"content":"Si no se acepta la prestación, el estipulante queda favorecido.","children":[],"payload":{"lines":"48,50"}}],"payload":{"lines":"47,48"}}],"payload":{"lines":"44,45"}}],"payload":{"lines":"7,8"}},null)</script>
 </body>
 </html>
