--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
       </nav>
     </header>
     <!-- Main Content -->
-    <main>
+    <main class="bg-dark">
       <section class="section bg-dark">
         <div class="container">
           <div class="row justify-content-center mb-5">
