--- a/apuntes/4. El consentimiento.html
+++ b/apuntes/4. El consentimiento.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="es" data-bs-theme="dark">
+<html lang="es" >
 <head>
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -11,7 +11,7 @@
       rel="stylesheet"
       integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH"
       crossorigin="anonymous">
-<link rel="stylesheet" href="./base.css">
+<link rel="stylesheet" href="../base.css">
 <style>
 * {
   margin: 0;
@@ -29,7 +29,7 @@
   <header>
     <nav class="navbar bg-body-tertiary">
       <div class="container-fluid justify-content-center">
-        <a class="navbar-brand navbar-logo" href="./index.html">F3RBAR</a>
+        <a class="navbar-brand navbar-logo" href="../index.html">F3RBAR</a>
       </div>
     </nav>
   </header>
