--- a/apuntes/6. Capacidad Objeto Causa Y Forma.html
+++ b/apuntes/6. Capacidad Objeto Causa Y Forma.html
@@ -27,7 +27,7 @@
 </head>
 <body>
   <header>
-    <nav class="navbar bg-body-tertiary">
+    <nav class="navbar bg-dark">
       <div class="container-fluid justify-content-center">
         <a class="navbar-brand navbar-logo" href="../index.html">F3RBAR</a>
       </div>
